--- a/client/templates/products/productDetail/variantForm/rentalVariantForm.html
+++ b/client/templates/products/productDetail/variantForm/rentalVariantForm.html
@@ -1,7 +1,7 @@
 <template name="rentalVariantForm">
   <div id="variant-edit-form-{{_id}}" class="variant-edit-form {{variantFormVisible}}">
     <div class="row well well-sm variant-form" >
-      {{#autoForm schema="ReactionCore.Schemas.ProductVariant" doc=. type="method" meteormethod="products/updateVariant" id=variantFormId validation="keyup" resetOnSuccess=false}}
+      {{#autoForm schema="ReactionCore.Schemas.RentalProductVariant" doc=. type="method" meteormethod="products/updateVariant" id=variantFormId validation="keyup" resetOnSuccess=false}}
       <fieldset>
         <div class="row">
           <div class="col-xs-12 col-sm-9 col-md-9">
@@ -42,10 +42,16 @@
                 <label class="control-label">{{afFieldLabelText name='pricePerDay'}}</label>
                 {{#if hasChildVariants}}
                   {{>afFieldInput name='pricePerDay' value="N/A" disabled=hasChildVariants}}
+                    {{>afFieldInput name='price' type='hidden' value="N/A" disabled=hasChildVariants}}
                 {{else}}
                   {{>afFieldInput name='pricePerDay'}}
                   {{#if afFieldIsInvalid name='pricePerDay'}}
-                  <span class="help-block">{{afFieldMessage name='pricePerDay'}}</span>
+                    <span class="help-block">{{afFieldMessage name='pricePerDay'}}</span>
+                  {{/if}}
+                  
+                  {{>afFieldInput name='price' type='hidden'}}
+                  {{#if afFieldIsInvalid name='price'}}
+                    <span class="help-block">{{afFieldMessage name='price'}}</span>
                   {{/if}}
                 {{/if}}
               </div>
@@ -121,7 +127,11 @@
           <th>Option</th>
           <th>Label</th>
           <th>Quantity</th>
-          <th>Price</th>
+          {{#if isProductType 'rental'}}
+            <th>Daily Rate</th>
+          {{else}}
+            <th>Price</th>
+          {{/if}}
           <th>Inventory Items</th>
           <th></th>
         </tr>
