--- a/client/templates/products/productDetail/rentalProductDetail.html
+++ b/client/templates/products/productDetail/rentalProductDetail.html
@@ -63,7 +63,7 @@
               <div class="col-xs-8">
                 {{!-- Price Fixation --}}
                 <span class="price">
-                  <span id="price" itemprop="price">{{formatPrice actualPrice}}</span>
+                  <span id="price" itemprop="price">{{formatPrice actualRentalOrPurchasablePrice}}</span>{{#if isProductType 'rental'}} / day {{/if}}
                 </span>
                 {{>fieldComponent field="vendor" value=vendor}}
               </div>
