--- a/client/templates/products/productGrid/productGrid.html
+++ b/client/templates/products/productGrid/productGrid.html
@@ -1,6 +1,6 @@
 <template name="rentalGridContent">
   <div class="grid-content">
-    <a href="{{pathForSEO 'product' 'handle'}}" data-event-category="grid" data-event-action="product-click" data-event-label="grid product click" data-event-value="{{_id}}">
+    <a href="" data-event-category="grid" data-event-action="product-click" data-event-label="grid product click" data-event-value="{{_id}}">
       <div class="overlay">
         <div class="overlay-title">{{title}}</div>
         <div class="currency-symbol">{{formatPrice displayPrice}}{{#if isRentalType type}} per day{{/if}}</div>
