--- a/client/templates/products/productDetail/rentalProductDetail.html
+++ b/client/templates/products/productDetail/rentalProductDetail.html
@@ -1,4 +1,5 @@
 <template name="rentalProductDetail">
+  {{#with product}}
   <div class="container-main">
     <div class="container-fluid pdp-container">
       {{!-- Product Visibility Admin Block --}}
@@ -126,4 +127,5 @@
       </div>
     </div>
   </div>
+  {{/with}}
 </template>
